@@ -1,0 +1,78 @@
+14.16667
+43.63889
+11.50000
+29.33333
+43.83333
+43.83333
+12.80238
+41.64841
+29.33333
+33.00000
+26.10000
+23.77063
+22.50952
+25.77063
+22.50952
+71.39286
+13.03333
+4.33333
+4.16429
+6.95952
+10.49048
+8.20952
+10.49048
+18.10952
+12.58333
+14.14524
+5.14762
+17.28095
+4.28095
+23.10873
+12.78095
+38.70159
+1.88810
+6.90000
+8.37143
+2.66667
+1.66667
+1.66667
+2.66667
+16.50000
+16.50000
+5.50000
+17.07778
+22.68492
+16.61429
+38.04921
+13.51111
+19.48889
+13.51111
+19.48889
+13.51111
+19.48889
+33.31349
+13.51111
+19.48889
+13.51111
+19.48889
+11.09444
+5.91111
+3.73333
+12.53333
+18.32778
+2.36667
+10.46667
+22.50000
+23.59444
+2.54286
+30.45714
+17.09762
+8.33333
+13.78095
+13.08730
+16.72222
+9.56667
+15.04286
+23.24444
+29.95397
+4.61429
